# GraphApp

./: .gitignore  AppPreferences.cpp  AppPreferences.h  CMakeLists.txt  DrawingPanel.cpp  DrawingPanel.h  Graph.cpp  Graph.h  GraphApp.rc  GraphApp.sln  GraphApp.vcxproj  GraphApp.vcxproj.filters  GraphFile.cpp  GraphFile.h  OutputProcessingResultsDialog.cpp  OutputProcessingResultsDialog.h  PreferenceDialog.cpp  PreferenceDialog.h  ProcessGraph.cpp  ProcessGraph.h  ProcessGraphDialog.cpp  ProcessGraphDialog.h  README.md  cApp.cpp  mainFrame.cpp  mainFrame.h  resource.h
examples/: bellman_ford_algorithm_test.graph  dijkstra_algorithm_text.graph  matrices_test.graph  processed_example.graph  test.graph
files/: global.ini  tool_tips.txt
res/: cursor24.xpm  process24color.xpm
res/files/: global.ini  tool_tips.txt
src/: AddEdgeDialog.cpp  AddEdgeDialog.h  AppPreferences.cpp  DrawingPanel.cpp  DrawingPanel.h  Graph.cpp  Graph.h  GraphFile.cpp  GraphFile.h  NodeStructureInfoDialog.cpp  NodeStructureInfoDialog.h  ProcessGraph.cpp  ProcessGraphDialog.cpp  QuickPrint.h  cApp.cpp  cApp.h  mainFrame.cpp  mainFrame.h
src/AppPreferences/: AppPreferences.cpp  AppPreferences.h  PreferenceDialog.cpp  PreferenceDialog.h
src/ProcessGraph/: GraphCalculator.cpp  GraphCalculator.h  OutputProcessingResultsDialog.cpp  OutputProcessingResultsDialog.h  ProcessGraph.cpp  ProcessGraph.h  ProcessGraphDialog.cpp  ProcessGraphDialog.h  ProcessGraphSettings.cpp  ProcessGraphSettings.h
wxCrafter/: add_edge_dialog.wxcp  node_structure_info_dialog.wxcp  process_graph_dialog.wxcp
(+1 files in other folders)
